# opengl-starter

./: .clangd  .gitignore  CMakeLists.txt  README.md
src/: hello_window.cpp  main.cpp
